--- a/route-finder/src/pages/login/login.html
+++ b/route-finder/src/pages/login/login.html
@@ -1,18 +1,15 @@
 <ion-header>
   <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
     <ion-title>Login</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h3>Entrar</h3>
+  <h3>Sign in</h3>
+  <form (ngSubmit)="doLogin()">
+    <input [(ngModel)]="user.email" name="email" placeholder="Email" required >
+    <input [(ngModel)]="user.password" name="password" placeholder="Password" type="password" required>
+    <button ion-button type="submit">Sign in</button>
+  </form>
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
 </ion-content>
