--- a/route-finder/src/pages/login/login.html
+++ b/route-finder/src/pages/login/login.html
@@ -17,7 +17,7 @@
     </ion-item>
     <ion-item>
       <ion-label>Password</ion-label>
-      <ion-input type="text" name="password" [(ngModel)]="registerCredentials.password" ></ion-input>
+      <ion-input type="password" name="password" [(ngModel)]="registerCredentials.password" ></ion-input>
     </ion-item>
 
     <button ion-button type="submit" block>Ok</button>
