--- a/route-finder/src/index.html
+++ b/route-finder/src/index.html
@@ -10,9 +10,12 @@
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
-  
+
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
+
+  <!-- Before send to production add in the end of url (i.e ?key=yourkey)  -->
+  <script src="http://maps.google.com/maps/api/js"></script>
 
   <!-- un-comment this code to enable service worker
   <script>
