--- a/route-finder/src/pages/page1/page1.html
+++ b/route-finder/src/pages/page1/page1.html
@@ -9,4 +9,14 @@
 
 <ion-content>
   <div #map id="map"></div>
+  <div id="gas-stations-list">
+    <ion-list>
+      <ion-item *ngFor="let gasStation of gasStationsList">
+        <img src="assets/imgs/marker_br.png" item-left>
+        <h2>{{gasStation.nome}}</h2>
+        <p>{{gasStation.endereco}}</p>
+        <button ion-button clear item-right>Sobre</button>
+      </ion-item>
+    </ion-list>
+  </div>
 </ion-content>
